@@ -611,9 +611,9 @@ part
 
     timeout		= 200;
     hvsp_controlstack     =
-	0x4C, 0x0C, 0x1C, 0x2C, 0x3C, 0x64, 0x74, 0x66,
-        0x68, 0x78, 0x68, 0x68, 0x7A, 0x6A, 0x68, 0x78,
-        0x78, 0x7D, 0x6D, 0x0C, 0x80, 0x40, 0x20, 0x10,
+        0x4C, 0x0C, 0x1C, 0x2C, 0x3C, 0x64, 0x74, 0x00,
+        0x68, 0x78, 0x68, 0x68, 0x00, 0x00, 0x68, 0x78,
+        0x78, 0x00, 0x6D, 0x0C, 0x80, 0x40, 0x20, 0x10,
         0x11, 0x08, 0x04, 0x02, 0x03, 0x08, 0x04, 0x00;
     hventerstabdelay    = 100;
     progmodedelay       = 0;
@@ -635,12 +635,14 @@ part
         size            = 64;
 	blocksize	= 64;
 	readsize	= 256;
+	delay		= 5;
     ;
 
     memory "flash"
         size            = 1024;
 	blocksize	= 128;
 	readsize	= 256;
+	delay		= 3;
     ;
 
     memory "signature"
