@@ -1,3 +1,10 @@
+2006-08-10 Joerg Wunsch <j@uriah.heep.sax.de>
+
+	* avrdude.conf.in (ATtiny11): fix the HVSP control stack,
+	add delay values required for flash and EEPROM.
+	* stk500v2.c: reverse the argument order for
+	CMD_CHIP_ERASE_HVSP; AVR068 and stk500.exe differ here.
+
 2006-08-09 Joerg Wunsch <j@uriah.heep.sax.de>
 
 	* stk500v2.c (stk500v2_program_enable): Fix a typo
